// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderMenu /> with border to right matches with snapshot 1`] = `
.c0 {
  --headerMenu-background-colors-hover: #fff;
  margin: 0;
  padding: 0;
  border: none;
  list-style: none;
}

.c0 .k-HeaderMenu__item__link {
  display: block;
  position: relative;
  width: 100%;
  text-align: left;
  border: none;
  height: 3.125rem;
  box-sizing: border-box;
  padding: 1.125rem 1.875rem 1.125rem;
  background-color: #fff;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition: color 0.2s,background-color 0.4s;
  transition: color 0.2s,background-color 0.4s;
}

.c0 .k-HeaderMenu__item__link:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: -0.0625rem;
}

.c0 .k-HeaderMenu__item__link:hover,
.c0 .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
  background-color: var(--headerMenu-background-colors-hover);
}

.c0 .k-HeaderMenu__item__link:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0 .k-HeaderMenu__item__link:focus-visible {
  outline-color: #bae8fd;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 1.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #f6f6f6;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link .k-HeaderMenu__item__arrow {
  margin-left: 1.25rem;
  position: relative;
  left: 0;
  -webkit-transition: left 0.2s;
  transition: left 0.2s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link svg,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link img {
  max-height: 1.5rem;
  width: auto;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover {
  color: #222;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus .k-HeaderMenu__item__arrow,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover .k-HeaderMenu__item__arrow {
  left: 0.3125rem;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link::before {
  display: none;
}

.c0 .k-HeaderMenu__item--hasButton {
  padding: 1.25rem;
  background-color: #fff;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:focus::before {
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide-left .k-HeaderMenu__item__link::before {
  left: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSide-right .k-HeaderMenu__item__link::before {
  right: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  height: auto;
  padding-top: 0;
  padding-bottom: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c0 .k-HeaderMenu__item--tiny + .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  padding-top: 0.3125rem;
}

.c0 .k-HeaderMenu__item--big .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0 .k-HeaderMenu__item--big.k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--light {
  color: #b8b8b8;
}

.c0 .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link::before {
  width: 0.25rem;
  background-color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorders {
  border-left: 0.0625rem solid #eee;
  border-right: 0.0625rem solid #eee;
}

.c0.k-HeaderMenu--hasBorders .k-HeaderMenu__item {
  border-bottom: 0.0625rem solid #eee;
}

<ul
  className="c0 k-HeaderMenu k-HeaderMenu--hasBorders k-HeaderMenu--hasBorderOnSide k-HeaderMenu--hasBorderOnSide-right k-HeaderMenu--hasBorderOnSideOnHover"
  style={
    Object {
      "--headerMenu-background-colors-hover": undefined,
    }
  }
>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 2
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 3
    </a>
  </li>
</ul>
`;

exports[`<HeaderMenu /> with button items matches with snapshot 1`] = `
.c1 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c1:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c1:focus-visible {
  outline-color: #bae8fd;
}

.c1.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c1.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c1.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c1.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c1.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c1.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c1.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c1.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c1.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c1.k-Button--fit-fluid {
  width: 100%;
}

.c1.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c1.k-Button--rounded {
  border-radius: 50%;
}

.c1.k-Button--orion {
  border-radius: 0.375rem;
}

.c1.k-Button--hydrogen {
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--hydrogen svg:not(.k-ColorSvg),
.c1.k-Button--hydrogen svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--hydrogen:hover,
.c1.k-Button--hydrogen:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--hydrogen:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--hydrogen:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--helium {
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--helium svg:not(.k-ColorSvg),
.c1.k-Button--helium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--helium:hover,
.c1.k-Button--helium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--helium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--helium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--lithium {
  border: 0.125rem solid #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--lithium svg:not(.k-ColorSvg),
.c1.k-Button--lithium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--lithium:hover,
.c1.k-Button--lithium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--lithium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--lithium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--beryllium {
  border: 0.125rem solid #222;
  background-color: #222;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--beryllium svg:not(.k-ColorSvg),
.c1.k-Button--beryllium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--beryllium:hover,
.c1.k-Button--beryllium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--beryllium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--beryllium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--carbon {
  border: 0.125rem solid #fff;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--carbon svg:not(.k-ColorSvg),
.c1.k-Button--carbon svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--carbon:hover,
.c1.k-Button--carbon:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--carbon:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--carbon:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--oxygen {
  border: 0.125rem dashed #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--oxygen svg:not(.k-ColorSvg),
.c1.k-Button--oxygen svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--oxygen:hover,
.c1.k-Button--oxygen:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--oxygen:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--oxygen:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--copper {
  border: 0.125rem solid #ffb2c7;
  background-color: #fff;
  color: #ff0046;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--copper svg:not(.k-ColorSvg),
.c1.k-Button--copper svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--copper:hover,
.c1.k-Button--copper:focus {
  border-color: currentColor;
  background-color: #fff;
  color: #ff0046;
}

.c1.k-Button--copper:active {
  border-color: currentColor;
  background-color: #fff;
  color: #ff0046;
}

.c1.k-Button--copper:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--boron {
  border: 0.125rem solid #636363;
  background-color: #222;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--boron svg:not(.k-ColorSvg),
.c1.k-Button--boron svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--boron:hover,
.c1.k-Button--boron:focus {
  border-color: currentColor;
  background-color: #2d2d2d;
  color: #fff;
}

.c1.k-Button--boron:active {
  border-color: currentColor;
  background-color: #2d2d2d;
  color: #b8b8b8;
}

.c1.k-Button--boron:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--neon {
  border: 0.125rem solid #ff7800;
  background-color: #ff7800;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--neon svg:not(.k-ColorSvg),
.c1.k-Button--neon svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--neon:hover,
.c1.k-Button--neon:focus {
  border-color: #f57905;
  background-color: #f57905;
  color: #fff;
}

.c1.k-Button--neon:active {
  border-color: #eb6e00;
  background-color: #eb6e00;
  color: #fff;
}

.c1.k-Button--neon:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--iron {
  border: 0.125rem solid #ff0046;
  background-color: #ff0046;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--iron svg:not(.k-ColorSvg),
.c1.k-Button--iron svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--iron:hover,
.c1.k-Button--iron:focus {
  border-color: #d8043e;
  background-color: #d8043e;
  color: #fff;
}

.c1.k-Button--iron:active {
  border-color: #a8002e;
  background-color: #a8002e;
  color: #fff;
}

.c1.k-Button--iron:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_facebook {
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_facebook svg:not(.k-ColorSvg),
.c1.k-Button--social_facebook svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_facebook:hover,
.c1.k-Button--social_facebook:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c1.k-Button--social_facebook:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c1.k-Button--social_facebook:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_twitter {
  border: 0.125rem solid #55acee;
  background-color: #55acee;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_twitter svg:not(.k-ColorSvg),
.c1.k-Button--social_twitter svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_twitter:hover,
.c1.k-Button--social_twitter:focus {
  border-color: #469ddf;
  background-color: #469ddf;
  color: #fff;
}

.c1.k-Button--social_twitter:active {
  border-color: #388ed0;
  background-color: #388ed0;
  color: #fff;
}

.c1.k-Button--social_twitter:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_linkedin {
  border: 0.125rem solid #00669e;
  background-color: #00669e;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_linkedin svg:not(.k-ColorSvg),
.c1.k-Button--social_linkedin svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_linkedin:hover,
.c1.k-Button--social_linkedin:focus {
  border-color: #00578f;
  background-color: #00578f;
  color: #fff;
}

.c1.k-Button--social_linkedin:active {
  border-color: #004880;
  background-color: #004880;
  color: #fff;
}

.c1.k-Button--social_linkedin:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_instagram {
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  -webkit-transition: background 0.2s,color 0.2s;
  transition: background 0.2s,color 0.2s;
  border: 0 !important;
  background-repeat: no-repeat;
  background-image: radial-gradient( farthest-side at 32% 100%,#ffe17d 0%,#ffcd69 10%,#fa9137 28%,#eb4141 42%,transparent 82% ),linear-gradient(135deg,#234bd7 12%,#c33cbe 58%);
  background-size: 160% 100%;
  background-position: center;
}

.c1.k-Button--social_instagram svg:not(.k-ColorSvg),
.c1.k-Button--social_instagram svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_instagram:hover,
.c1.k-Button--social_instagram:focus {
  background-image: radial-gradient( farthest-side at 32% 100%,#f0d26e 0%,#f0be5a 10%,#eb8228 28%,#dc3232 42%,transparent 82% ),linear-gradient(135deg,#143cc8 12%,#b42daf 58%);
}

.c1.k-Button--social_instagram:active {
  background-image: radial-gradient( farthest-side at 32% 100%,#e1c35f 0%,#e1af4b 10%,#dc7319 28%,#cd2323 42%,transparent 82% ),linear-gradient(135deg,#052db9 12%,#a51ea0 58%);
}

.c1.k-Button--social_instagram:hover,
.c1.k-Button--social_instagram:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c1.k-Button--social_instagram:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c1.k-Button--social_instagram:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_youtube {
  border: 0.125rem solid #ff0000;
  background-color: #ff0000;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_youtube svg:not(.k-ColorSvg),
.c1.k-Button--social_youtube svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_youtube:hover,
.c1.k-Button--social_youtube:focus {
  border-color: #f00000;
  background-color: #f00000;
  color: #fff;
}

.c1.k-Button--social_youtube:active {
  border-color: #e10000;
  background-color: #e10000;
  color: #fff;
}

.c1.k-Button--social_youtube:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_pinterest {
  border: 0.125rem solid #bd081c;
  background-color: #bd081c;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_pinterest svg:not(.k-ColorSvg),
.c1.k-Button--social_pinterest svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_pinterest:hover,
.c1.k-Button--social_pinterest:focus {
  border-color: #ae000d;
  background-color: #ae000d;
  color: #fff;
}

.c1.k-Button--social_pinterest:active {
  border-color: #9f0000;
  background-color: #9f0000;
  color: #fff;
}

.c1.k-Button--social_pinterest:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0 {
  --headerMenu-background-colors-hover: #fff;
  margin: 0;
  padding: 0;
  border: none;
  list-style: none;
}

.c0 .k-HeaderMenu__item__link {
  display: block;
  position: relative;
  width: 100%;
  text-align: left;
  border: none;
  height: 3.125rem;
  box-sizing: border-box;
  padding: 1.125rem 1.875rem 1.125rem;
  background-color: #fff;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition: color 0.2s,background-color 0.4s;
  transition: color 0.2s,background-color 0.4s;
}

.c0 .k-HeaderMenu__item__link:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: -0.0625rem;
}

.c0 .k-HeaderMenu__item__link:hover,
.c0 .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
  background-color: var(--headerMenu-background-colors-hover);
}

.c0 .k-HeaderMenu__item__link:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0 .k-HeaderMenu__item__link:focus-visible {
  outline-color: #bae8fd;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 1.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #f6f6f6;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link .k-HeaderMenu__item__arrow {
  margin-left: 1.25rem;
  position: relative;
  left: 0;
  -webkit-transition: left 0.2s;
  transition: left 0.2s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link svg,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link img {
  max-height: 1.5rem;
  width: auto;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover {
  color: #222;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus .k-HeaderMenu__item__arrow,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover .k-HeaderMenu__item__arrow {
  left: 0.3125rem;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link::before {
  display: none;
}

.c0 .k-HeaderMenu__item--hasButton {
  padding: 1.25rem;
  background-color: #fff;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:focus::before {
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide-left .k-HeaderMenu__item__link::before {
  left: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSide-right .k-HeaderMenu__item__link::before {
  right: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  height: auto;
  padding-top: 0;
  padding-bottom: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c0 .k-HeaderMenu__item--tiny + .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  padding-top: 0.3125rem;
}

.c0 .k-HeaderMenu__item--big .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0 .k-HeaderMenu__item--big.k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--light {
  color: #b8b8b8;
}

.c0 .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link::before {
  width: 0.25rem;
  background-color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorders {
  border-left: 0.0625rem solid #eee;
  border-right: 0.0625rem solid #eee;
}

.c0.k-HeaderMenu--hasBorders .k-HeaderMenu__item {
  border-bottom: 0.0625rem solid #eee;
}

@media (min-width:40rem) {
  .c1.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--orion {
    border-radius: 0.5rem;
  }
}

<ul
  className="c0 k-HeaderMenu k-HeaderMenu--hasBorders k-HeaderMenu--hasBorderOnSide k-HeaderMenu--hasBorderOnSide-right k-HeaderMenu--hasBorderOnSideOnHover"
  style={
    Object {
      "--headerMenu-background-colors-hover": undefined,
    }
  }
>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <button
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href={null}
      onClick={[Function]}
      type="button"
    >
      Button item
    </button>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal k-HeaderMenu__item--hasButton"
    role="menuitem"
  >
    <button
      className="c1 k-Button k-HeaderMenu__item__button k-Button--regular k-Button--null k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none k-Button--fit-fluid"
      href="#"
      style={
        Object {
          "--Button-border-radius": 0,
        }
      }
      type="button"
    >
      Item 3
    </button>
  </li>
</ul>
`;

exports[`<HeaderMenu /> with one custom item matches with snapshot 1`] = `
.c0 {
  --headerMenu-background-colors-hover: #fff;
  margin: 0;
  padding: 0;
  border: none;
  list-style: none;
}

.c0 .k-HeaderMenu__item__link {
  display: block;
  position: relative;
  width: 100%;
  text-align: left;
  border: none;
  height: 3.125rem;
  box-sizing: border-box;
  padding: 1.125rem 1.875rem 1.125rem;
  background-color: #fff;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition: color 0.2s,background-color 0.4s;
  transition: color 0.2s,background-color 0.4s;
}

.c0 .k-HeaderMenu__item__link:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: -0.0625rem;
}

.c0 .k-HeaderMenu__item__link:hover,
.c0 .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
  background-color: var(--headerMenu-background-colors-hover);
}

.c0 .k-HeaderMenu__item__link:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0 .k-HeaderMenu__item__link:focus-visible {
  outline-color: #bae8fd;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 1.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #f6f6f6;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link .k-HeaderMenu__item__arrow {
  margin-left: 1.25rem;
  position: relative;
  left: 0;
  -webkit-transition: left 0.2s;
  transition: left 0.2s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link svg,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link img {
  max-height: 1.5rem;
  width: auto;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover {
  color: #222;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus .k-HeaderMenu__item__arrow,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover .k-HeaderMenu__item__arrow {
  left: 0.3125rem;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link::before {
  display: none;
}

.c0 .k-HeaderMenu__item--hasButton {
  padding: 1.25rem;
  background-color: #fff;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:focus::before {
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide-left .k-HeaderMenu__item__link::before {
  left: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSide-right .k-HeaderMenu__item__link::before {
  right: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  height: auto;
  padding-top: 0;
  padding-bottom: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c0 .k-HeaderMenu__item--tiny + .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  padding-top: 0.3125rem;
}

.c0 .k-HeaderMenu__item--big .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0 .k-HeaderMenu__item--big.k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--light {
  color: #b8b8b8;
}

.c0 .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link::before {
  width: 0.25rem;
  background-color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorders {
  border-left: 0.0625rem solid #eee;
  border-right: 0.0625rem solid #eee;
}

.c0.k-HeaderMenu--hasBorders .k-HeaderMenu__item {
  border-bottom: 0.0625rem solid #eee;
}

<ul
  className="c0 k-HeaderMenu k-HeaderMenu--hasBorders k-HeaderMenu--hasBorderOnSide k-HeaderMenu--hasBorderOnSide-left k-HeaderMenu--hasBorderOnSideOnHover"
  style={
    Object {
      "--headerMenu-background-colors-hover": undefined,
    }
  }
>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 2
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal k-HeaderMenu__item--external"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      <a
        href="#custom-component"
      >
        Custom component
      </a>
      <svg
        className="k-HeaderMenu__item__arrow headerMenuArrowIcon"
        fill="#222"
        height="5.64"
        style={
          Object {
            "transform": "rotate(90deg)",
          }
        }
        viewBox="0 0 8.48 5.64"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <path
          d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
        />
      </svg>
    </a>
  </li>
</ul>
`;

exports[`<HeaderMenu /> with one selected item matches with snapshot 1`] = `
.c0 {
  --headerMenu-background-colors-hover: #fff;
  margin: 0;
  padding: 0;
  border: none;
  list-style: none;
}

.c0 .k-HeaderMenu__item__link {
  display: block;
  position: relative;
  width: 100%;
  text-align: left;
  border: none;
  height: 3.125rem;
  box-sizing: border-box;
  padding: 1.125rem 1.875rem 1.125rem;
  background-color: #fff;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition: color 0.2s,background-color 0.4s;
  transition: color 0.2s,background-color 0.4s;
}

.c0 .k-HeaderMenu__item__link:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: -0.0625rem;
}

.c0 .k-HeaderMenu__item__link:hover,
.c0 .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
  background-color: var(--headerMenu-background-colors-hover);
}

.c0 .k-HeaderMenu__item__link:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0 .k-HeaderMenu__item__link:focus-visible {
  outline-color: #bae8fd;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 1.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #f6f6f6;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link .k-HeaderMenu__item__arrow {
  margin-left: 1.25rem;
  position: relative;
  left: 0;
  -webkit-transition: left 0.2s;
  transition: left 0.2s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link svg,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link img {
  max-height: 1.5rem;
  width: auto;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover {
  color: #222;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus .k-HeaderMenu__item__arrow,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover .k-HeaderMenu__item__arrow {
  left: 0.3125rem;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link::before {
  display: none;
}

.c0 .k-HeaderMenu__item--hasButton {
  padding: 1.25rem;
  background-color: #fff;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:focus::before {
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide-left .k-HeaderMenu__item__link::before {
  left: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSide-right .k-HeaderMenu__item__link::before {
  right: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  height: auto;
  padding-top: 0;
  padding-bottom: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c0 .k-HeaderMenu__item--tiny + .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  padding-top: 0.3125rem;
}

.c0 .k-HeaderMenu__item--big .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0 .k-HeaderMenu__item--big.k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--light {
  color: #b8b8b8;
}

.c0 .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link::before {
  width: 0.25rem;
  background-color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorders {
  border-left: 0.0625rem solid #eee;
  border-right: 0.0625rem solid #eee;
}

.c0.k-HeaderMenu--hasBorders .k-HeaderMenu__item {
  border-bottom: 0.0625rem solid #eee;
}

<ul
  className="c0 k-HeaderMenu k-HeaderMenu--hasBorders k-HeaderMenu--hasBorderOnSide k-HeaderMenu--hasBorderOnSide-left k-HeaderMenu--hasBorderOnSideOnHover"
  style={
    Object {
      "--headerMenu-background-colors-hover": undefined,
    }
  }
>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal k-HeaderMenu__item--isSelected"
    role="menuitem"
  >
    <a
      aria-current="page"
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 2
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 3
    </a>
  </li>
</ul>
`;

exports[`<HeaderMenu /> with three items matches with snapshot 1`] = `
.c0 {
  --headerMenu-background-colors-hover: #fff;
  margin: 0;
  padding: 0;
  border: none;
  list-style: none;
}

.c0 .k-HeaderMenu__item__link {
  display: block;
  position: relative;
  width: 100%;
  text-align: left;
  border: none;
  height: 3.125rem;
  box-sizing: border-box;
  padding: 1.125rem 1.875rem 1.125rem;
  background-color: #fff;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition: color 0.2s,background-color 0.4s;
  transition: color 0.2s,background-color 0.4s;
}

.c0 .k-HeaderMenu__item__link:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: -0.0625rem;
}

.c0 .k-HeaderMenu__item__link:hover,
.c0 .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
  background-color: var(--headerMenu-background-colors-hover);
}

.c0 .k-HeaderMenu__item__link:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c0 .k-HeaderMenu__item__link:focus-visible {
  outline-color: #bae8fd;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 1.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #f6f6f6;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link .k-HeaderMenu__item__arrow {
  margin-left: 1.25rem;
  position: relative;
  left: 0;
  -webkit-transition: left 0.2s;
  transition: left 0.2s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link svg,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link img {
  max-height: 1.5rem;
  width: auto;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover {
  color: #222;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus .k-HeaderMenu__item__arrow,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover .k-HeaderMenu__item__arrow {
  left: 0.3125rem;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link::before {
  display: none;
}

.c0 .k-HeaderMenu__item--hasButton {
  padding: 1.25rem;
  background-color: #fff;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:focus::before {
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide-left .k-HeaderMenu__item__link::before {
  left: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSide-right .k-HeaderMenu__item__link::before {
  right: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  height: auto;
  padding-top: 0;
  padding-bottom: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c0 .k-HeaderMenu__item--tiny + .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  padding-top: 0.3125rem;
}

.c0 .k-HeaderMenu__item--big .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0 .k-HeaderMenu__item--big.k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--light {
  color: #b8b8b8;
}

.c0 .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link::before {
  width: 0.25rem;
  background-color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorders {
  border-left: 0.0625rem solid #eee;
  border-right: 0.0625rem solid #eee;
}

.c0.k-HeaderMenu--hasBorders .k-HeaderMenu__item {
  border-bottom: 0.0625rem solid #eee;
}

<ul
  className="c0 k-HeaderMenu k-HeaderMenu--hasBorders k-HeaderMenu--hasBorderOnSide k-HeaderMenu--hasBorderOnSide-left k-HeaderMenu--hasBorderOnSideOnHover"
  style={
    Object {
      "--headerMenu-background-colors-hover": undefined,
    }
  }
>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal k-HeaderMenu__item--light"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 2
    </a>
  </li>
  <li
    className="k-HeaderMenu__item customLiClass k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 3
    </a>
  </li>
</ul>
`;
